--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "express": "^4.18.2",
     "is-upper-case": "^2.0.2",
     "mysql": "^2.18.1",
+    "mysql2": "^2.3.3",
+    "sequelize": "^6.26.0",
     "upper-case": "^2.0.2"
   },
   "devDependencies": {
