--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
   "dependencies": {
     "express": "^4.18.2",
     "is-upper-case": "^2.0.2",
+    "mariadb": "^3.0.2",
     "mysql": "^2.18.1",
+    "sequelize": "^6.26.0",
     "upper-case": "^2.0.2"
   },
   "devDependencies": {
