--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "starto": "nodemon index.js"
+    "start": "nodemon index.js"
   },
   "repository": {
     "type": "git",
